--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/file-saver": "^2.0.5",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "ngx-image-cropper": "^6.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
