--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ngx-image-cropper": "^6.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "workbox-precaching": "^7.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
